✨ Cambios en el pom.xml padre