@@ -61,12 +61,6 @@
       <version>${aws-lambda-java-events.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.projectlombok</groupId>
-      <artifactId>lombok</artifactId>
-      <version>1.18.30</version>
-      <scope>provided</scope>
-    </dependency>
 
 
     <!-- Jackson Dependencies -->
@@ -172,7 +166,6 @@
         <version>3.24.2</version>
         <scope>test</scope>
     </dependency>
-
   </dependencies>
 
   <build>
@@ -185,16 +178,6 @@
           <configuration>
             <source>21</source>
             <target>21</target>
-                <annotationProcessorPaths>
-                    <path>
-                        <groupId>org.projectlombok</groupId>
-                        <artifactId>lombok</artifactId>
-                        <version>1.18.30</version>
-                    </path>
-                </annotationProcessorPaths>
-            <compilerArgs>
-              <arg>--enable-preview</arg>
-            </compilerArgs>
           </configuration>
         </plugin>
         
@@ -211,10 +194,19 @@
               <configuration>
                 <createDependencyReducedPom>false</createDependencyReducedPom>
                 <transformers>
-                  <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                    <mainClass>${lambda.main.class}</mainClass>
-                  </transformer>
+                  <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                 </transformers>
+                <filters>
+                  <filter>
+                    <artifact>*:*</artifact>
+                    <excludes>
+                      <exclude>META-INF/*.SF</exclude>
+                      <exclude>META-INF/*.DSA</exclude>
+                      <exclude>META-INF/*.RSA</exclude>
+                      <exclude>module-info.class</exclude>
+                    </excludes>
+                  </filter>
+                </filters>
               </configuration>
             </execution>
           </executions>
@@ -224,9 +216,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${maven-surefire-plugin.version}</version>
-          <configuration>
-            <argLine>--enable-preview</argLine>
-          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
